crates/djls-project/tests/snapshots/corpus__repos__pretix__src__pretix__base__templatetags__cache_large.py.snap
---
source: crates/djls-project/tests/corpus.rs
expression: sorted_snapshot(&bundle)?
---
definitions:
  "tag::cache_large":
    kind: tag
    has_doc: false
symbols_are_unobserved: false
tag_rules:
  "pretix.base.templatetags.cache_large::tag::cache_large":
    arg_constraints:
      - Min: 3
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    diagnostic_messages:
      - constraint:
          ArgumentCount:
            Min: 3
        message:
          PercentFormat:
            template: "'%r' tag requires at least 2 arguments."
            args:
              - SplitElement:
                  Forward: 0
    argument_syntax:
      Parameters:
        - name: arg1
          requirement: required
          kind: Variable
        - name: arg2
          requirement: required
          kind: Variable
    as_var: keep
filter_arities: {}
block_specs:
  "pretix.base.templatetags.cache_large::tag::cache_large":
    body_analysis_evidence: not_detected
    end_tag: endcache_large
    intermediates: []
