crates/djls-project/tests/snapshots/corpus__repos__pretix__src__pretix__base__templatetags__calendarhead.py.snap
---
source: crates/djls-project/tests/corpus.rs
expression: sorted_snapshot(&bundle)?
---
definitions:
  "filter::iter_weekdays":
    kind: filter
    has_doc: false
symbols_are_unobserved: false
tag_rules: {}
filter_arities:
  "pretix.base.templatetags.calendarhead::filter::iter_weekdays": no_argument
block_specs: {}
