crates/djls-project/tests/snapshots/corpus__repos__pretix__src__pretix__base__templatetags__classname.py.snap
---
source: crates/djls-project/tests/corpus.rs
expression: sorted_snapshot(&bundle)?
---
definitions:
  "filter::classname":
    kind: filter
    has_doc: false
symbols_are_unobserved: false
tag_rules: {}
filter_arities:
  "pretix.base.templatetags.classname::filter::classname": no_argument
block_specs: {}
