crates/djls-project/tests/snapshots/corpus__repos__pretix__src__pretix__base__templatetags__daterange.py.snap
---
source: crates/djls-project/tests/corpus.rs
expression: sorted_snapshot(&bundle)?
---
definitions:
  "filter::datetimerange":
    kind: filter
    has_doc: false
symbols_are_unobserved: false
tag_rules: {}
filter_arities:
  "pretix.base.templatetags.daterange::filter::datetimerange": required_argument
block_specs: {}
