crates/djls-project/tests/snapshots/corpus__repos__pretix__src__pretix__base__templatetags__escapejson.py.snap
---
source: crates/djls-project/tests/corpus.rs
expression: "sorted_snapshot(&bundle).expect(\"corpus extraction snapshot should serialize\")"
---
definitions:
  "filter::attr_escapejson_dumps":
    kind: filter
    has_doc: false
  "filter::escapejson":
    kind: filter
    has_doc: false
  "filter::escapejson_dumps":
    kind: filter
    has_doc: false
symbols_are_unobserved: false
tag_rules: {}
filter_arities:
  "src.pretix.base.templatetags.escapejson::filter::attr_escapejson_dumps": no_argument
  "src.pretix.base.templatetags.escapejson::filter::escapejson_dumps": no_argument
block_specs: {}
