crates/djls-project/tests/snapshots/corpus__repos__pretix__src__pretix__base__templatetags__eventsignal.py.snap
---
source: crates/djls-project/tests/corpus.rs
expression: sorted_snapshot(&bundle)?
---
definitions:
  "tag::eventsignal":
    kind: tag
    has_doc: false
  "tag::signal":
    kind: tag
    has_doc: false
symbols_are_unobserved: false
tag_rules:
  "pretix.base.templatetags.eventsignal::tag::eventsignal":
    arg_constraints: []
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    argument_syntax:
      Signature:
        parameters:
          - name: event
            requirement: required
            kind: Variable
          - name: signame
            requirement: required
            kind: Variable
        positional_only: 0
        variadic_keyword: kwargs
    as_var: strip
  "pretix.base.templatetags.eventsignal::tag::signal":
    arg_constraints: []
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    argument_syntax:
      Signature:
        parameters:
          - name: signame
            requirement: required
            kind: Variable
          - name: request
            requirement: required
            kind: Variable
        positional_only: 0
        variadic_keyword: kwargs
    as_var: strip
filter_arities: {}
block_specs: {}
