crates/djls-project/tests/snapshots/corpus__repos__pretix__src__pretix__base__templatetags__html_time.py.snap
---
source: crates/djls-project/tests/corpus.rs
expression: sorted_snapshot(&bundle)?
---
definitions:
  "tag::html_time":
    kind: tag
    has_doc: false
symbols_are_unobserved: false
tag_rules:
  "pretix.base.templatetags.html_time::tag::html_time":
    arg_constraints: []
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    argument_syntax:
      Signature:
        parameters:
          - name: value
            requirement: required
            kind: Variable
          - name: dt_format
            requirement: optional
            kind: Variable
        positional_only: 0
        variadic_keyword: kwargs
    as_var: strip
filter_arities: {}
block_specs: {}
