crates/djls-project/tests/snapshots/corpus__repos__pretix__src__pretix__base__templatetags__icon.py.snap
---
source: crates/djls-project/tests/corpus.rs
expression: sorted_snapshot(&bundle)?
---
definitions:
  "tag::icon":
    kind: tag
    has_doc: false
symbols_are_unobserved: false
tag_rules:
  "pretix.base.templatetags.icon::tag::icon":
    arg_constraints: []
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    argument_syntax:
      Signature:
        parameters:
          - name: key
            requirement: required
            kind: Variable
          - name: args
            requirement: optional
            kind: VarArgs
        positional_only: 0
        variadic_keyword: kwargs
    as_var: strip
filter_arities: {}
block_specs: {}
