crates/djls-project/tests/snapshots/corpus__repos__pretix__src__pretix__base__templatetags__lists.py.snap
---
source: crates/djls-project/tests/corpus.rs
expression: sorted_snapshot(&bundle)?
---
definitions:
  "filter::joinlines":
    kind: filter
    has_doc: false
  "filter::splitlines":
    kind: filter
    has_doc: false
symbols_are_unobserved: false
tag_rules: {}
filter_arities:
  "pretix.base.templatetags.lists::filter::joinlines": no_argument
  "pretix.base.templatetags.lists::filter::splitlines": no_argument
block_specs: {}
