crates/djls-project/tests/snapshots/corpus__repos__pretix__src__pretix__base__templatetags__money.py.snap
---
source: crates/djls-project/tests/corpus.rs
expression: sorted_snapshot(&bundle)?
---
definitions:
  "filter::money":
    kind: filter
    has_doc: false
  "filter::money_numberfield":
    kind: filter
    has_doc: false
symbols_are_unobserved: false
tag_rules: {}
filter_arities:
  "pretix.base.templatetags.money::filter::money": optional_argument
  "pretix.base.templatetags.money::filter::money_numberfield": optional_argument
block_specs: {}
