crates/djls-project/tests/snapshots/corpus__repos__pretix__src__pretix__base__templatetags__oneline.py.snap
---
source: crates/djls-project/tests/corpus.rs
expression: sorted_snapshot(&bundle)?
---
definitions:
  "filter::oneline":
    kind: filter
    has_doc: false
symbols_are_unobserved: false
tag_rules: {}
filter_arities:
  "pretix.base.templatetags.oneline::filter::oneline": no_argument
block_specs: {}
