crates/djls-project/tests/snapshots/corpus__repos__pretix__src__pretix__base__templatetags__phone_format.py.snap
---
source: crates/djls-project/tests/corpus.rs
expression: sorted_snapshot(&bundle)?
---
definitions:
  "filter::phone_format":
    kind: filter
    has_doc: false
symbols_are_unobserved: false
tag_rules: {}
filter_arities:
  "pretix.base.templatetags.phone_format::filter::phone_format": optional_argument
block_specs: {}
